--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Perl extension Amon2::Plugin::Auth
 
+0.02
+
+    - docs
+
 0.01    Wed Oct 12 06:32:46 2011
         - original version
